--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@
 title: Esteban Aldana
 email: f/xjvzkayd
 url: https://elestebann.github.io/
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+ 
+#"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Esteban Aldana: Software Engineer and Game Producer."
 keywords: "your keywords, separated by commas"
 skills: "Software Engineer - Game Producer"
 meta_author: Aldana Esteban
