--- a/_config.yml
+++ b/_config.yml
@@ -41,16 +41,21 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+#  - title: twitter
+#    url: http://twitter.com/jekyllrb
+#  - title: facebook
+#    url:
+#  - title: stack-overflow
+#    url: http://stackoverflow.com/questions/tagged/jekyll
+#  - title: bitbucket
+#    url: http://bitbucket.org/jekyll
   - title: github
     url: https://github.com/ElEstebann
+  - title: itch-io
+    url: https://elestebann.itch.io/
+  - title: itch-io
+    url: https://www.linkedin.com/in/esteban-aldana/
+
 
 # Postal address (add as many lines as necessary)
 address:
