--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
     url: https://github.com/ElEstebann
   - title: itch-io
     url: https://elestebann.itch.io/
-  - title: itch-io
+  - title: linkedin
     url: https://www.linkedin.com/in/esteban-aldana/
 
 
