--- a/_config.yml
+++ b/_config.yml
@@ -74,14 +74,4 @@ defaults:
       path: ""
       type: "posts"
     values:
-      layout: default
-      modal-id: 1
-      date: 2020-01-18
-      img: cabin.png
-      alt: image-alt
-      project-date: January 2020
-      client: The Client
-      category: Web Development
-      description: The description of the project
-
-
+      permalink: ""
