--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://elestebann.github.io/
  
 #"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 description: "Esteban Aldana: Software Engineer and Game Producer."
-keywords: "your keywords, separated by commas"
+keywords: "Software, Engineer, Game, Games, Developer, Producer, Programmer, Videogame Developer, Game Producer, Videogame Producer, Videogame Programmer"
 skills: "Software Engineer - Game Producer"
 meta_author: Aldana Esteban
 
