--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ email: f/xjvzkayd
 url: esteban.games
  
 #"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-description: "Esteban Aldana: Software Engineer and Game Producer."
-keywords: "Software, Engineer, Game, Games, Developer, Producer, Programmer, Videogame Developer, Game Producer, Videogame Producer, Videogame Programmer"
+description: "Esteban Aldana: Videogame Programmer and Producer."
+keywords: "Software, Engineer, Game, Games, Developer, Producer, Programmer, Videogame Developer, Game Producer, Videogame Producer, Videogame Programmer, videogames, professional"
 skills: "Software Engineer - Game Producer"
-meta_author: Aldana Esteban
+meta_author: Esteban Aldana
 
 # Google webmaster tools
 google_verify:
