--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: esteban.games
 #"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 description: "Esteban Aldana: Videogame Developer and Producer."
 keywords: "Software, Engineer, Game, Games, Developer, Producer, Programmer, Videogame Developer, Game Producer, Videogame Producer, Videogame Programmer, videogames, professional, Esteban, Esteban Aldana, Aldana"
-skills: "Software Developer & Game Producer"
+skills: "Videogame Developer & Game Producer"
 meta_author: Esteban Aldana
 
 # Google webmaster tools
