--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Los Angeles, California
+  - line: Los Angeles, California, USA
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
